heapuse-tests/tests/ui/fail-derive-unknown-attrs.stderr
error: unknown heap attribute `unknown`
 --> tests/ui/fail-derive-unknown-attrs.rs:6:12
  |
6 |     #[heap(unknown)]
  |            ^^^^^^^
